Fixed z-index issue on menus

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1{
 
 /*Menus*/
 #cwd_navigation ul{
-	z-index: 999;
+	z-index: 1500;
 }
 
 /*Nometa pages*/
